--- a/main.css
+++ b/main.css
@@ -1,51 +1,10 @@
+@import "https://fonts.google.com/css?/Outfamily=Outfit:400,700";
 body {
     background-color: hsl(0, 0%, 100%);
 }
 
-
-/* @media only screen and (min-width:375px) { */
-
-
-/* For mobile phones: */
-
-
-/* img {
-    border-radius: 10%;
-    padding: 1rem;
-    width: 85%;
-}
-responsive
-h2 {
-    font-size: 18px;
-    font-family: outfit;
-    font-weight: 700;
-}
-
-.container {
-    margin-top: 10rem;
-    background-color: white;
-    border-radius: 15px;
-    text-align: center;
-    margin-left: 20%;
-    margin-right: 20%;
-}
-
-p {
-    font-size: 15px;
-    color: hsl(220, 15%, 55%);
-} */
-
-
-/* } */
-
-
-/* @media only screen and (max-width:1440px) { */
-
 img {
-    /* border-radius: 7%;
-    padding: 1rem; */
     width: 100%;
-    /* max-width: 500px; */
     height: auto;
 }
 
@@ -79,7 +38,7 @@ p {
     margin-top: 6%;
     width: 60%;
     height: 540px;
-    box-shadow: 5px 10px #888888
+    box-shadow: 5px 10px 10px #888888
 }
 
 
@@ -93,6 +52,7 @@ p {
         margin-top: 15%;
         width: auto;
         height: 540px;
+        box-shadow: 0px 0px 0px;
     }
     .responsive img {
         /* border-radius: 7%;
